# finn-example-ROS2-pkg

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: finn_tester.launch.py
src/: bbox_arm_node.cpp  finn_interfacer_node.cpp  finn_interfacer_node.h  image0.h  image1.h  image10.h  image11.h  image12.h  image13.h  image14.h  image15.h  image2.h  image3.h  image4.h  image5.h  image6.h  image7.h  image8.h  image9.h
